Fix buttons being not links, nav bar going to wrong links

--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <div class="container"><a class="navbar-brand" href="/" style="font-size: 25px;">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="/ux" style="font-size: 16px;">Home</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="/" style="font-size: 16px;">Home</a></li>
                     <li class="nav-item dropdown multilevel" id="multilevel"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#" style="font-size: 16px;">PROJECTS</a>
                         <div class="dropdown-menu">
                             <div class="nav-item dropright" style="height: 32px;padding: 4px 24px;"><a class="dropdown-toggle text-dark" aria-expanded="false" data-toggle="dropdown" href="#">Engines</a>
                                 <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="/forge-engine">Forge Engine</a></div>
                             </div>
                             <div class="nav-item dropright" style="height: 32px;padding: 4px 24px;"><a class="dropdown-toggle text-dark" aria-expanded="false" data-toggle="dropdown" href="#">Games</a>
-                                <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="/howl">Howl: A Tale of Wolves</a><a class="dropdown-item" href="/spellthief">Spellthief</a></div>
+                                <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="https://howl-game.com/">Howl: A Tale of Wolves</a><a class="dropdown-item" href="https://arcade.digipen.edu/games/spellthief">Spellthief</a></div>
                             </div>
                         </div>
                     </li>
@@ -58,7 +58,7 @@
                     <h2 class="text-left" style="color: rgb(255,255,255);">Forge Engine</h2>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">An engine made for a Year 2 &amp; 3 game project.</p>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">The editor's interface and various functionalities are focused on future-proofing and extendibility.<br><br>Technology implemented here by me include C# scripting integration, prefab technology, memory management, and adaptive audio.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Forge Engine was used to develop <a href="https://howl-game.com/">Howl: A Tale of Wolves</a>.</p><button class="btn btn-primary" type="button"><a href="/forge-engine" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Forge Engine was used to develop <a href="https://howl-game.com/">Howl: A Tale of Wolves</a>.</p><a class="btn btn-primary" role="button" href="/forge-engine"><a href="/forge-engine" style="color: rgb(255,255,255);">SEE MORE</a></a>
                 </div>
             </div>
         </div>
@@ -87,7 +87,7 @@
                     <p class="text-left" style="color: rgb(255,203,68);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-bottom: 0px;"><em>3rd Prize, Claude Comair Game of the Year — DigiPen (Singapore) Awards</em><br><em>Winner of Best Sophomore Game — DigiPen (Singapore) Awards</em><br><em>Winner of Best Sophomore Technology — DigiPen (Singapore) Awards</em><br></p>
                     <p class="text-left" style="color: rgb(255,226,151);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-top: 0px;"><em>Finalist for Best 2D Graphics Technology — DigiPen (Singapore) Awards</em><br><em>Finalist for Most Innovative Design — DigiPen (Singapore) Awards</em><br></p>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Gameplay implemented here by me include UI programming, animation transitions, and bug fixing.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Howl: A Tale of Wolves was developed using <a href="/forge-engine">Forge Engine</a>.</p><button class="btn btn-primary" type="button"><a href="https://howl-game.com/" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Howl: A Tale of Wolves was developed using <a href="/forge-engine">Forge Engine</a>.</p><a class="btn btn-primary" role="button" href="https://howl-game.com/"><a href="https://howl-game.com/" style="color: rgb(255,255,255);">SEE MORE</a></a>
                 </div>
             </div>
         </div>
@@ -102,7 +102,7 @@
                     <p class="text-left" style="color: rgb(255,203,68);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-bottom: 0px;"><em>Winner, Best Freshman Technology | ST Engineering | DigiPen Game Awards 2019</em><br></p>
                     <p class="text-left" style="color: rgb(255,226,151);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-top: 0px;"><em>Finalist, Best 2D Physics Technology | Continental Singapore | DigiPen Game Awards 2019</em><br><em>Finalist, Best Artificial Intelligence | Ubisoft Singapore | DigiPen Game Awards 2019</em><br><em>Finalist, Best Music and Sound Design | DigiPen (Singapore) | DigiPen Game Awards 2019</em><br></p>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Gameplay implemented here by me include UI programming, animation transitions, AI, and bug fixing.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Spellthief was developed using <a href="/beta-engine">Beta Engine</a>.</p><button class="btn btn-primary" type="button"><a href="https://arcade.digipen.edu/games/spellthief" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Spellthief was developed using <a href="/beta-engine">Beta Engine</a>.</p><a class="btn btn-primary" role="button" href="https://arcade.digipen.edu/games/spellthief"><a href="https://arcade.digipen.edu/games/spellthief" style="color: rgb(255,255,255);">SEE MORE</a></a>
                 </div>
             </div>
         </div>
