--- a/ux/index.html
+++ b/ux/index.html
@@ -19,14 +19,14 @@
         <div class="container"><a class="navbar-brand" href="/" style="font-size: 25px;">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="/ux" style="font-size: 16px;">Home</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="/" style="font-size: 16px;">Home</a></li>
                     <li class="nav-item dropdown multilevel" id="multilevel"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#" style="font-size: 16px;">PROJECTS</a>
                         <div class="dropdown-menu">
                             <div class="nav-item dropright" style="height: 32px;padding: 4px 24px;"><a class="dropdown-toggle text-dark" aria-expanded="false" data-toggle="dropdown" href="#">Engines</a>
                                 <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="/forge-engine">Forge Engine</a></div>
                             </div>
                             <div class="nav-item dropright" style="height: 32px;padding: 4px 24px;"><a class="dropdown-toggle text-dark" aria-expanded="false" data-toggle="dropdown" href="#">Games</a>
-                                <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="/howl">Howl: A Tale of Wolves</a><a class="dropdown-item" href="/spellthief">Spellthief</a></div>
+                                <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="https://howl-game.com/">Howl: A Tale of Wolves</a><a class="dropdown-item" href="https://arcade.digipen.edu/games/spellthief">Spellthief</a></div>
                             </div>
                         </div>
                     </li>
