--- a/about-me/index.html
+++ b/about-me/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>About me - Janus</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css?h=95d950105ba7ad1cd2873789123a6f35">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css?h=ddbc4ba9791d35ee94b790c28e082299">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
     <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css?h=320bd0471c3e8d6b9dd55c98e185506c">
@@ -52,9 +52,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-lg-8 mx-auto">
-                <p>I am Janus Quek, a Bachelor of Science in Computer Science and Game Design undergraduate from&nbsp;DigiPen Institute of Technology Singapore. I have been programming for both game and non-game projects since 2012.<br></p>
+                <p>Currently an&nbsp;undergraduate in the Bachelor of Science in Computer Science and Game Design program from&nbsp;DigiPen Institute of Technology Singapore with a Minor in Mathematics, I have been programming for both game and non-game projects since 2012.<br></p>
                 <p>I mostly work on game engines, implementing APIs and editor interfaces for other developers to use, but I frequently do gameplay programming as well.</p>
-                <p>I am currently looking for work. Since you are already here, why not connect with me over <a href="https://www.linkedin.com/in/janus-quek/">Linkedin</a>?</p>
+                <p>Since you are already here, why not connect with me over <a href="https://www.linkedin.com/in/janus-quek/">Linkedin</a>?</p>
             </div>
         </div>
     </div>
