--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Janus</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=95d950105ba7ad1cd2873789123a6f35">
+    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css?h=ddbc4ba9791d35ee94b790c28e082299">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
     <link rel="stylesheet" href="assets/fonts/font-awesome.min.css?h=320bd0471c3e8d6b9dd55c98e185506c">
@@ -84,8 +84,8 @@
                 <div class="col-md-6 text-center column-text" style="border-left: 2px solid rgb(255,255,255);">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Howl: A Tale of Wolves</h2>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;"><em>Howl: A Tale of Wolves is a single-player platformer set in the harsh yet beautiful wilderness. In this interactive experience, players take control of an adult wolf and her young pup who have just had their home destroyed. Together, they brave rough terrains and overcome dangerous obstacles through the seasons - but will it be enough to finally reach paradise across the mountains?</em></p>
-                    <p class="text-left" style="color: rgb(255,203,68);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-bottom: 0px;"><em>3rd Prize, Claude Comair Game of the Year — DigiPen (Singapore) Awards</em><br><em>Winner of Best Sophomore Game — DigiPen (Singapore) Awards</em><br><em>Winner of Best Sophomore Technology — DigiPen (Singapore) Awards</em><br></p>
-                    <p class="text-left" style="color: rgb(255,226,151);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-top: 0px;"><em>Finalist for Best 2D Graphics Technology — DigiPen (Singapore) Awards</em><br><em>Finalist for Most Innovative Design — DigiPen (Singapore) Awards</em><br></p>
+                    <p class="text-left" style="color: rgb(255,203,68);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-bottom: 0px;"><em>3rd&nbsp;—&nbsp;&nbsp;Claude Comair Game of the Year, DigiPen (Singapore) Awards</em><br><em>Best Sophomore Game, DigiPen (Singapore) Awards</em><br><em>Best Sophomore Technology, DigiPen (Singapore) Awards</em><br></p>
+                    <p class="text-left" style="color: rgb(255,226,151);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-top: 0px;"><em>Finalist&nbsp;—&nbsp;Best 2D Graphics Technology, DigiPen (Singapore) Awards</em><br><em>Finalist&nbsp;—&nbsp;Most Innovative Design, DigiPen (Singapore) Awards</em><br></p>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Gameplay implemented here by me include UI programming, animation transitions, and bug fixing.</p>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Howl: A Tale of Wolves was developed using <a href="/forge-engine">Forge Engine</a>.</p><button class="btn btn-primary" type="button"><a href="https://howl-game.com/" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
@@ -99,8 +99,8 @@
                 <div class="col-md-6 text-center column-text" style="border-left: 2px solid rgb(255,255,255) ;">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Spellthief</h2>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;"><em>Spellthief is a fast paced action platformer where you simultaneously play as both Clyde the thief, as well as Oliver the mage. As you fight your way through the relentless waves of mobs and gain new skills, uncover the dark secret that ties the two unbeknownst adventurers.</em><br></p>
-                    <p class="text-left" style="color: rgb(255,203,68);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-bottom: 0px;"><em>Winner, Best Freshman Technology | ST Engineering | DigiPen Game Awards 2019</em><br></p>
-                    <p class="text-left" style="color: rgb(255,226,151);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-top: 0px;"><em>Finalist, Best 2D Physics Technology | Continental Singapore | DigiPen Game Awards 2019</em><br><em>Finalist, Best Artificial Intelligence | Ubisoft Singapore | DigiPen Game Awards 2019</em><br><em>Finalist, Best Music and Sound Design | DigiPen (Singapore) | DigiPen Game Awards 2019</em><br></p>
+                    <p class="text-left" style="color: rgb(255,203,68);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-bottom: 0px;"><em>Best Freshman Technology from ST Engineering, DigiPen (Singapore) Awards</em><br></p>
+                    <p class="text-left" style="color: rgb(255,226,151);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-top: 0px;"><em>Finalist&nbsp;—&nbsp;Best 2D Physics Technology from Continental Singapore, DigiPen (Singapore) Awards</em><br><em>Finalist&nbsp;—&nbsp;Best Artificial Intelligence from Ubisoft Singapore, DigiPen (Singapore) Awards</em><br><em>Finalist&nbsp;—&nbsp;Best Music and Sound Design, DigiPen (Singapore) Awards</em><br></p>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Gameplay implemented here by me include UI programming, animation transitions, AI, and bug fixing.</p>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Spellthief was developed using <a href="/beta-engine">Beta Engine</a>.</p><button class="btn btn-primary" type="button"><a href="https://arcade.digipen.edu/games/spellthief" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
