Fix some main page stuff

--- a/about-me/index.html
+++ b/about-me/index.html
@@ -52,9 +52,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-lg-8 mx-auto">
-                <p>Currently an&nbsp;undergraduate in the Bachelor of Science in Computer Science and Game Design program with a Minor in Mathematics from&nbsp;DigiPen Institute of Technology Singapore, I have been programming for game and non-game projects since 2012.<br></p>
-                <p>I mostly work on game engines, implementing APIs and editor interfaces for other developers to use, but I frequently do gameplay programming as well.</p>
-                <p>Since you are already here, why not connect with me over <a href="https://www.linkedin.com/in/janus-quek/">Linkedin</a>?</p>
+                <p style="font-family: 'Open Sans', sans-serif;">Currently an&nbsp;undergraduate in the Bachelor of Science in Computer Science and Game Design program with a Minor in Mathematics from&nbsp;DigiPen Institute of Technology Singapore, I have been programming for game and non-game projects since 2012.<br></p>
+                <p style="font-family: 'Open Sans', sans-serif;">I mostly work on game engines, implementing APIs and editor interfaces for other developers to use, but I frequently do gameplay programming as well.</p>
+                <p style="font-family: 'Open Sans', sans-serif;">Since you are already here, why not connect with me over <a href="https://www.linkedin.com/in/janus-quek/">Linkedin</a>?</p>
             </div>
         </div>
     </div>
