--- a/contact-me/index.html
+++ b/contact-me/index.html
@@ -52,7 +52,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-lg-8 mx-auto">
-                <p>Want to get in touch? Feel free to either connect with me over <a href="https://www.linkedin.com/in/janus-quek/">Linkedin</a> or <a href="mailto:janus.quek@gmail.com">email</a>!</p>
+                <p style="font-family: 'Open Sans', sans-serif;">Want to get in touch? Feel free to either connect with me over <a href="https://www.linkedin.com/in/janus-quek/">Linkedin</a> or <a href="mailto:janus.quek@gmail.com">email</a>!</p>
             </div>
         </div>
     </div>
