--- a/forge-engine/index.html
+++ b/forge-engine/index.html
@@ -53,8 +53,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
-                    <p style="font-family: 'Open Sans', sans-serif;">Forge Engine is a game engine created to develop a Year 2 and Year 3 game project.</p>
-                    <p style="font-family: 'Open Sans', sans-serif;">It is also the game engine that came after Beta Engine, so it has various improvements over its predecessor.</p>
+                    <p style="font-family: 'Open Sans', sans-serif;">A game engine created to develop a Year 2 and Year 3 game project, Forge Engine has various improvements over its predecessor, Beta Engine.</p>
                     <p style="font-family: 'Open Sans', sans-serif;"><a href="https://howl-game.com">Howl: A Tale of Wolves</a>, a DigiPen award-winning game, was created with Forge Engine.</p>
                     <p style="font-family: 'Open Sans', sans-serif;">Here are some of the technologies I developed for Forge Engine:</p>
                     <h2 class="section-heading">C# Scripting API &amp; Integration</h2>
