--- a/index.html
+++ b/index.html
@@ -52,9 +52,9 @@
     <h1 style="text-align: center;color: rgb(255,255,255);">MY ENGINES</h1>
     <section>
         <div class="container">
-            <div class="row row-media" style="border: 5px none rgb(255,255,255);border-top-style: none;border-bottom-width: 2px;border-bottom-style: solid;">
+            <div class="row row-media" style="border: 5px none rgb(255,255,255) ;border-top-style: none;border-bottom-width: 3px;border-bottom-style: solid;">
                 <div class="col-md-6 column-media"><img class="img-fluid" src="assets/img/EngineLoadingScreen.jpg?h=eff9d9e2ef103f29d07a6e773094bbb5"></div>
-                <div class="col-md-6 text-center column-text" style="border-left: 2px solid rgb(255,255,255) ;">
+                <div class="col-md-6 text-center column-text" style="border-left: 3px solid rgb(255,255,255) ;">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Forge Engine</h2>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">An engine made for a Year 2 &amp; 3 game project.</p>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">The editor's interface and various functionalities are focused on future-proofing and extendibility.<br><br>Technology implemented here by me include C# scripting integration, prefab technology, memory management, and adaptive audio.</p>
@@ -65,13 +65,13 @@
     </section>
     <section style="border-bottom-style: none;">
         <div class="container">
-            <div class="row row-media" style="border: 5px none rgb(255,255,255) ;border-bottom-width: 2px;border-bottom-style: none;">
+            <div class="row row-media" style="border: 5px none rgb(255,255,255) ;border-bottom-width: 3px;border-bottom-style: none;">
                 <div class="col-md-6 column-media"><img class="img-fluid" src="assets/img/Beta_Engine_Icon.png?h=99c3ea4dd524e9fead52e675dbbb82c2" style="margin: 0px;max-width: 200%;width: 256px;margin-left: 9rem;"></div>
-                <div class="col-md-6 text-center column-text" style="border-left: 2px solid rgb(255,255,255) ;">
+                <div class="col-md-6 text-center column-text" style="border-left: 3px solid rgb(255,255,255) ;">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Beta Engine</h2>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">An engine made for a Year 1 game project.</p>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">The editor's interface and various functionalities are focused on building the game rapidly.<br><br>Technology implemented here by me include inheritance-based Entity-Component System, editor interfaces, and a job delay system.<br></p>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Beta Engine was used to develop <a href="/spellthief">Spellthief</a>.</p><button class="btn btn-secondary disabled" type="button" disabled=""><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Beta Engine was used to develop <a href="https://arcade.digipen.edu/games/spellthief">Spellthief</a>.</p><button class="btn btn-secondary disabled" type="button" disabled=""><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
             </div>
         </div>
@@ -79,9 +79,9 @@
     <h1 style="text-align: center;color: rgb(255,255,255);margin-top: 50px;">MY GAMES</h1>
     <section>
         <div class="container">
-            <div class="row row-media" style="border: 5px none rgb(255,255,255) ;border-bottom-width: 2px;border-bottom-style: solid;">
-                <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/Thzyh-l_c0A?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-style: solid;"></iframe></div>
-                <div class="col-md-6 text-center column-text" style="border-left: 2px solid rgb(255,255,255);">
+            <div class="row row-media" style="border: 5px none rgb(255,255,255) ;border-bottom-width: 3px;border-bottom-style: solid;">
+                <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/Thzyh-l_c0A?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-style: none;"></iframe></div>
+                <div class="col-md-6 text-center column-text" style="border-left: 3px solid rgb(255,255,255) ;">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Howl: A Tale of Wolves</h2>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;"><em>Howl: A Tale of Wolves is a single-player platformer set in the harsh yet beautiful wilderness. In this interactive experience, players take control of an adult wolf and her young pup who have just had their home destroyed. Together, they brave rough terrains and overcome dangerous obstacles through the seasons - but will it be enough to finally reach paradise across the mountains?</em></p>
                     <p class="text-left" style="color: rgb(255,203,68);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-bottom: 0px;"><em>3rd&nbsp;—&nbsp;&nbsp;Claude Comair Game of the Year, DigiPen (Singapore) Awards</em><br><em>Best Sophomore Game, DigiPen (Singapore) Awards</em><br><em>Best Sophomore Technology, DigiPen (Singapore) Awards</em><br></p>
@@ -95,8 +95,8 @@
     <section>
         <div class="container">
             <div class="row row-media" style="border: 5px none rgb(255,255,255) ;">
-                <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/f5lT43tN1Gg?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-style: solid;"></iframe></div>
-                <div class="col-md-6 text-center column-text" style="border-left: 2px solid rgb(255,255,255) ;">
+                <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/f5lT43tN1Gg?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-width: 3px;border-right-style: none;"></iframe></div>
+                <div class="col-md-6 text-center column-text" style="border-left: 3px solid rgb(255,255,255) ;">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Spellthief</h2>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;"><em>Spellthief is a fast paced action platformer where you simultaneously play as both Clyde the thief, as well as Oliver the mage. As you fight your way through the relentless waves of mobs and gain new skills, uncover the dark secret that ties the two unbeknownst adventurers.</em><br></p>
                     <p class="text-left" style="color: rgb(255,203,68);font-family: 'Open Sans', sans-serif;font-size: 16px;margin-bottom: 0px;"><em>Best Freshman Technology from ST Engineering, DigiPen (Singapore) Awards</em><br></p>
