--- a/ux/about-me/index.html
+++ b/ux/about-me/index.html
@@ -16,34 +16,27 @@
 
 <body style="background: rgb(0,0,0);color: rgb(255,255,255);">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav" style="padding-top: 0px;">
-        <div class="container"><a class="navbar-brand" href="/" style="font-size: 25px;">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand" href="/ux" style="font-size: 25px;">JANUS - UX</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="/" style="font-size: 16px;">Home</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="/ux" style="font-size: 16px;">Home</a></li>
                     <li class="nav-item dropdown multilevel" id="multilevel"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#" style="font-size: 16px;">PROJECTS</a>
-                        <div class="dropdown-menu">
-                            <div class="nav-item dropright" style="height: 32px;padding: 4px 24px;"><a class="dropdown-toggle text-dark" aria-expanded="false" data-toggle="dropdown" href="#">Engines</a>
-                                <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="/forge-engine">Forge Engine</a></div>
-                            </div>
-                            <div class="nav-item dropright" style="height: 32px;padding: 4px 24px;"><a class="dropdown-toggle text-dark" aria-expanded="false" data-toggle="dropdown" href="#">Games</a>
-                                <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="https://howl-game.com/">Howl: A Tale of Wolves</a><a class="dropdown-item" href="https://arcade.digipen.edu/games/spellthief">Spellthief</a></div>
-                            </div>
-                        </div>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="/ux/forge-engine">Forge Engine</a><a class="dropdown-item" href="/ux/beta-engine">Beta Engine</a></div>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="/resume.pdf" style="font-size: 16px;">RESUME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/about-me" style="font-size: 16px;">About ME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/contact-me" style="font-size: 16px;">CONTACT ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ux/resume.pdf" style="font-size: 16px;">RESUME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ux/about-me" style="font-size: 16px;">About ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ux/contact-me" style="font-size: 16px;">CONTACT ME</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background: url(&quot;../../assets/img/insert-picture-of-me-here-playing-symphony-hall-today-wish-55408534.png?h=bba7f45653e8a728de62c171da863194&quot;) center / cover no-repeat;">
+    <header class="masthead" style="background: url(&quot;../../assets/img/IMG_20210227_141532_502.jpg?h=229af8f8af7eb4dac292dfe44bcbe764&quot;) top / auto no-repeat;margin-bottom: 50px;">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
                     <div class="site-heading" style="padding-top: 100px;padding-bottom: 100px;">
-                        <h1>About Me</h1><span class="subheading">This is who I am</span>
+                        <h1>ABOUT ME</h1>
                     </div>
                 </div>
             </div>
@@ -52,9 +45,9 @@
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-lg-8 mx-auto">
-                <p>I am Janus Quek, a Bachelor of Science in Computer Science and Game Design undergraduate from&nbsp;DigiPen Institute of Technology Singapore. I have been programming for both game and non-game projects since 2012.<br></p>
-                <p>I mostly develop APIs and interfaces for other programmers and/or designers to use, but I frequently do gameplay programming and frontend application development as well.</p>
-                <p>I am currently looking for work. Since you are already here, why not drop me a message about job prospects?</p>
+                <p style="font-family: 'Open Sans', sans-serif;">Currently an&nbsp;undergraduate in the Bachelor of Science in Computer Science and Game Design program with a Minor in Mathematics from&nbsp;DigiPen Institute of Technology Singapore, I have been programming for game and non-game projects since 2012.<br></p>
+                <p style="font-family: 'Open Sans', sans-serif;">I mostly work on game engines, implementing APIs and editor interfaces for other developers to use, but I frequently do gameplay programming as well.</p>
+                <p style="font-family: 'Open Sans', sans-serif;">Since you are already here, why not connect with me over <a href="https://www.linkedin.com/in/janus-quek/">Linkedin</a>?</p>
             </div>
         </div>
     </div>
