--- a/ux/index.html
+++ b/ux/index.html
@@ -16,34 +16,27 @@
 
 <body style="background: rgb(0,0,0);">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav" style="padding-top: 0px;">
-        <div class="container"><a class="navbar-brand" href="/" style="font-size: 25px;">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand" href="/ux" style="font-size: 25px;">JANUS - UX</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="/" style="font-size: 16px;">Home</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="/ux" style="font-size: 16px;">Home</a></li>
                     <li class="nav-item dropdown multilevel" id="multilevel"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#" style="font-size: 16px;">PROJECTS</a>
-                        <div class="dropdown-menu">
-                            <div class="nav-item dropright" style="height: 32px;padding: 4px 24px;"><a class="dropdown-toggle text-dark" aria-expanded="false" data-toggle="dropdown" href="#">Engines</a>
-                                <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="/forge-engine">Forge Engine</a></div>
-                            </div>
-                            <div class="nav-item dropright" style="height: 32px;padding: 4px 24px;"><a class="dropdown-toggle text-dark" aria-expanded="false" data-toggle="dropdown" href="#">Games</a>
-                                <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="https://howl-game.com/">Howl: A Tale of Wolves</a><a class="dropdown-item" href="https://arcade.digipen.edu/games/spellthief">Spellthief</a></div>
-                            </div>
-                        </div>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="/ux/forge-engine">Forge Engine</a><a class="dropdown-item" href="/ux/beta-engine">Beta Engine</a></div>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="/resume.pdf" style="font-size: 16px;">RESUME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/about-me" style="font-size: 16px;">About ME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/contact-me" style="font-size: 16px;">CONTACT ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ux/resume.pdf" style="font-size: 16px;">RESUME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ux/about-me" style="font-size: 16px;">About ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ux/contact-me" style="font-size: 16px;">CONTACT ME</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background: url(&quot;../assets/img/laptop.jpg?h=683cd8a5377d56bab71ac174f6526c3e&quot;) bottom / cover;">
+    <header class="masthead" style="background: url(&quot;../assets/img/pexels-junior-teixeira-2047905.jpg?h=5d8f722ce14d0f7717690e7e6a5949b0&quot;) center / cover;">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
                     <div class="site-heading" style="padding-top: 100px;padding-bottom: 100px;">
-                        <h1>I BUILD TOOLS</h1><span class="subheading">Janus Quek, API developer</span>
+                        <h1>HI, I'M JANUS</h1><span class="subheading">API &amp; Tools Developer</span>
                     </div>
                 </div>
             </div>
@@ -52,52 +45,26 @@
     <h1 style="text-align: center;color: rgb(255,255,255);">MY WORKS</h1>
     <section>
         <div class="container">
-            <div class="row row-media" style="border: 5px solid rgb(255,255,255) ;">
-                <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/LMlCN6_vUvs?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-style: solid;"></iframe></div>
-                <div class="col-md-6 text-center column-text" style="border-left: 5px solid rgb(255,255,255) ;">
-                    <h2 class="text-left" style="color: rgb(255,255,255);">Beta Engine</h2>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">An engine made for a Year 1 game project.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">The editor's interface and various functionalities are focused on building the game rapidly.<br><br>I developed some non-typical features here such as a robust animation editor, prefab tiler, and a dialogue editor.<br></p>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">This project does not have a landing page yet.</p><button class="btn btn-secondary" type="button"><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="container">
-            <div class="row row-media" style="border: 5px solid rgb(255,255,255) ;">
-                <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/LMlCN6_vUvs?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-style: solid;"></iframe></div>
-                <div class="col-md-6 text-center column-text" style="border-left: 5px solid rgb(255,255,255) ;">
+            <div class="row row-media" style="border: 5px none rgb(255,255,255) ;border-top-style: none;border-bottom-width: 3px;border-bottom-style: solid;">
+                <div class="col-md-6 column-media"><img class="img-fluid" src="../assets/img/EngineLoadingScreen.jpg?h=eff9d9e2ef103f29d07a6e773094bbb5"></div>
+                <div class="col-md-6 text-center column-text" style="border-left: 3px solid rgb(255,255,255) ;">
                     <h2 class="text-left" style="color: rgb(255,255,255);">Forge Engine</h2>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">An engine made for a Year 2 &amp; 3 game project.</p>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">The editor's interface and various functionalities are focused on future-proofing and extendibility.<br><br>I implemented many features with an API for other users such as C# scripting integration, flexible file I/O, and prefab technology.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">This project is still WIP as of Milestone 1.</p><button class="btn btn-primary" type="button"><a href="/ux/forge-engine" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Forge Engine was used to develop <a href="https://howl-game.com/">Howl: A Tale of Wolves</a>.</p><button class="btn btn-primary" type="button"><a href="/forge-engine" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
             </div>
         </div>
     </section>
-    <section>
+    <section style="border-bottom-style: none;">
         <div class="container">
-            <div class="row row-media" style="border: 5px solid rgb(255,255,255) ;">
-                <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/LMlCN6_vUvs?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-style: solid;"></iframe></div>
-                <div class="col-md-6 text-center column-text" style="border-left: 5px solid rgb(255,255,255) ;">
-                    <h2 class="text-left" style="color: rgb(255,255,255);">Others</h2>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">A bunch of other plug and play APIs such as Unity helper scripts and C++ containers.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Some of these include a card builder and a lockless hashmap.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">This project does not have a landing page yet.</p><button class="btn btn-secondary" type="button"><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
-                </div>
-            </div>
-        </div>
-    </section>
-    <section>
-        <div class="container">
-            <div class="row row-media" style="border: 5px solid rgb(255,255,255) ;">
-                <div class="col-md-6 column-media"><iframe allowfullscreen="" frameborder="0" src="https://www.youtube.com/embed/LMlCN6_vUvs?autoplay=1&amp;mute=1" width="560" height="315" style="height: 555;border-right-style: solid;"></iframe></div>
-                <div class="col-md-6 text-center column-text" style="border-left: 5px solid rgb(255,255,255) ;">
-                    <h2 class="text-left" style="color: rgb(255,255,255);">Trojan</h2>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">A game made in Unity for a tertiary year project.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Trojan is a rail-shooter game, where an anti-virus program has to rid the PC of viruses.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">This project is what will be used to showcase layout and content for Milestone 1.</p><button class="btn btn-primary" type="button"><a href="/ux/trojan" style="color: rgb(255,255,255);">SEE MORE</a></button>
+            <div class="row row-media" style="border: 5px none rgb(255,255,255) ;border-bottom-width: 3px;border-bottom-style: none;">
+                <div class="col-md-6 column-media"><img class="img-fluid" src="../assets/img/Beta_Engine_Icon.png?h=99c3ea4dd524e9fead52e675dbbb82c2" style="margin: 0px;max-width: 200%;width: 256px;margin-left: 9rem;"></div>
+                <div class="col-md-6 text-center column-text" style="border-left: 3px solid rgb(255,255,255) ;">
+                    <h2 class="text-left" style="color: rgb(255,255,255);">Beta Engine</h2>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">An engine made for a Year 1 game project.</p>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">The editor's interface and various functionalities are focused on building the game rapidly.<br><br>I developed some non-typical features here such as a robust animation editor, prefab tiler, and a dialogue editor.<br></p>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Beta Engine was used to develop <a href="/spellthief">Spellthief</a>.</p><button class="btn btn-secondary disabled" type="button" disabled=""><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
             </div>
         </div>
