--- a/ux/contact-me/index.html
+++ b/ux/contact-me/index.html
@@ -16,34 +16,27 @@
 
 <body style="background: rgb(0,0,0);color: rgb(255,255,255);">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav" style="padding-top: 0px;">
-        <div class="container"><a class="navbar-brand" href="/" style="font-size: 25px;">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand" href="/ux" style="font-size: 25px;">JANUS - UX</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="/" style="font-size: 16px;">Home</a></li>
+                    <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="/ux" style="font-size: 16px;">Home</a></li>
                     <li class="nav-item dropdown multilevel" id="multilevel"><a class="dropdown-toggle nav-link" aria-expanded="false" data-toggle="dropdown" href="#" style="font-size: 16px;">PROJECTS</a>
-                        <div class="dropdown-menu">
-                            <div class="nav-item dropright" style="height: 32px;padding: 4px 24px;"><a class="dropdown-toggle text-dark" aria-expanded="false" data-toggle="dropdown" href="#">Engines</a>
-                                <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="/forge-engine">Forge Engine</a></div>
-                            </div>
-                            <div class="nav-item dropright" style="height: 32px;padding: 4px 24px;"><a class="dropdown-toggle text-dark" aria-expanded="false" data-toggle="dropdown" href="#">Games</a>
-                                <div class="dropdown-menu" style="padding: 0px;"><a class="dropdown-item" href="https://howl-game.com/">Howl: A Tale of Wolves</a><a class="dropdown-item" href="https://arcade.digipen.edu/games/spellthief">Spellthief</a></div>
-                            </div>
-                        </div>
+                        <div class="dropdown-menu"><a class="dropdown-item" href="/ux/forge-engine">Forge Engine</a><a class="dropdown-item" href="/ux/beta-engine">Beta Engine</a></div>
                     </li>
-                    <li class="nav-item"><a class="nav-link" href="/resume.pdf" style="font-size: 16px;">RESUME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/about-me" style="font-size: 16px;">About ME</a></li>
-                    <li class="nav-item"><a class="nav-link" href="/contact-me" style="font-size: 16px;">CONTACT ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ux/resume.pdf" style="font-size: 16px;">RESUME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ux/about-me" style="font-size: 16px;">About ME</a></li>
+                    <li class="nav-item"><a class="nav-link" href="/ux/contact-me" style="font-size: 16px;">CONTACT ME</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <header class="masthead" style="background: url(&quot;../../assets/img/contact-bg.jpg?h=1683d68fadc4673ed0357866ae18fbab&quot;) center / cover no-repeat;">
+    <header class="masthead" style="background: url(&quot;../../assets/img/pexels-negative-space-48605.jpg?h=ba5b68ae02bdfa8a3c4d709d14ca8169&quot;) top / auto no-repeat;">
         <div class="overlay"></div>
         <div class="container">
             <div class="row">
                 <div class="col-md-10 col-lg-8 mx-auto">
                     <div class="site-heading" style="padding-top: 100px;padding-bottom: 100px;">
-                        <h1>Contact Me</h1><span class="subheading">Have questions? I have answers</span>
+                        <h1>CONTACT ME</h1>
                     </div>
                 </div>
             </div>
@@ -52,27 +45,10 @@
     <div class="container">
         <div class="row">
             <div class="col-md-10 col-lg-8 mx-auto">
-                <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-                <form id="contactForm" name="sentMessage" novalidate="novalidate">
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls"><label>Name</label><input class="form-control" type="text" id="name" required="" placeholder="Name"><small class="form-text text-danger help-block"></small></div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls"><label>Email Address</label><input class="form-control" type="email" id="email" required="" placeholder="Email Address"><small class="form-text text-danger help-block"></small></div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls"><label>Phone Number</label><input class="form-control" type="tel" id="phone" required="" placeholder="Phone Number"><small class="form-text text-danger help-block"></small></div>
-                    </div>
-                    <div class="control-group">
-                        <div class="form-group floating-label-form-group controls mb-3"><label>Message</label><textarea class="form-control" id="message" data-validation-required-message="Please enter a message." required="" placeholder="Message" rows="5"></textarea><small class="form-text text-danger help-block"></small></div>
-                    </div>
-                    <div id="success"></div>
-                    <div class="form-group"><button class="btn btn-primary" id="sendMessageButton" type="submit">Send</button></div>
-                </form>
+                <p style="font-family: 'Open Sans', sans-serif;">Want to get in touch? Feel free to either connect with me over <a href="https://www.linkedin.com/in/janus-quek/">Linkedin</a> or <a href="mailto:janus.quek@gmail.com">email</a>!</p>
             </div>
         </div>
     </div>
-    <hr>
     <footer>
         <div class="container">
             <div class="row">
