Remove the UX from UX Nav Bar

--- a/ux/about-me/index.html
+++ b/ux/about-me/index.html
@@ -16,7 +16,7 @@
 
 <body style="background: rgb(0,0,0);color: rgb(255,255,255);">
     <nav class="navbar navbar-light navbar-expand-lg fixed-top" id="mainNav" style="padding-top: 0px;">
-        <div class="container"><a class="navbar-brand" href="/ux" style="font-size: 25px;">JANUS - UX</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
+        <div class="container"><a class="navbar-brand" href="/ux" style="font-size: 25px;">JANUS</a><button data-toggle="collapse" data-target="#navbarResponsive" class="navbar-toggler" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><i class="fa fa-bars"></i></button>
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item" style="font-size: 20px;"><a class="nav-link" href="/ux" style="font-size: 16px;">Home</a></li>
