--- a/ux/index.html
+++ b/ux/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <title>Home - Janus</title>
-    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css?h=ddbc4ba9791d35ee94b790c28e082299">
+    <link rel="stylesheet" href="../assets/bootstrap/css/bootstrap.min.css?h=8f2e3b87612e8fee64172879b4622efe">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic">
     <link rel="stylesheet" href="../assets/fonts/font-awesome.min.css?h=320bd0471c3e8d6b9dd55c98e185506c">
@@ -51,7 +51,7 @@
                     <h2 class="text-left" style="color: rgb(255,255,255);">Forge Engine</h2>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">An engine made for a Year 2 &amp; 3 game project.</p>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">The editor's interface and various functionalities are focused on future-proofing and extendibility.<br><br>I implemented many features with an API for other users such as C# scripting integration, flexible file I/O, and prefab technology.</p>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Forge Engine was used to develop <a href="https://howl-game.com/">Howl: A Tale of Wolves</a>.</p><button class="btn btn-primary" type="button"><a href="/forge-engine" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Forge Engine was used to develop <a href="https://howl-game.com/">Howl: A Tale of Wolves</a>.</p><button class="btn btn-primary" type="button"><a href="/ux/forge-engine" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
             </div>
         </div>
@@ -64,7 +64,7 @@
                     <h2 class="text-left" style="color: rgb(255,255,255);">Beta Engine</h2>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">An engine made for a Year 1 game project.</p>
                     <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">The editor's interface and various functionalities are focused on building the game rapidly.<br><br>I developed some non-typical features here such as a robust animation editor, prefab tiler, and a dialogue editor.<br></p>
-                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Beta Engine was used to develop <a href="/spellthief">Spellthief</a>.</p><button class="btn btn-secondary disabled" type="button" disabled=""><a href="#" style="color: rgb(255,255,255);">SEE MORE</a></button>
+                    <p class="text-left" style="color: rgb(255,255,255);font-family: 'Open Sans', sans-serif;">Beta Engine was used to develop <a href="/spellthief">Spellthief</a>.</p><button class="btn btn-primary" type="button"><a href="/ux/beta-engine" style="color: rgb(255,255,255);">SEE MORE</a></button>
                 </div>
             </div>
         </div>
